--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Basic: Moda masculina basica</title>
+    <meta name="description" content="Compra online ropa de hombre y actualiza tus looks con nuestra coleccion de moda basica">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Styles/Styles.css">
+    <link rel="shortcut icon" type="image/jpeg" href="Assets/favicon.png">
 </head>
 <body>
     <header>
@@ -21,17 +23,17 @@
                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
           </div>
           <div class="login">
-               <a href="login.html"><img src="Assets/usuario.png"></a>
+               <a href="Pages/login.html"><img src="Assets/usuario.png"></a>
           </div>        
         </section> 
 
         <section class="navbar">
                 <ul id="lista1">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Camperas.html">Camperas</a></li>
-                    <li><a href="Camisetas.html">Camisetas</a></li>
-                    <li><a href="Pantalones.html">Pantalones</a></li>
-                    <li><a href="Calzado.html">Calzado</a></li>
+                    <li><a href="Pages/Camperas.html">Camperas</a></li>
+                    <li><a href="Pages/Camisetas.html">Camisetas</a></li>
+                    <li><a href="Pages/Pantalones.html">Pantalones</a></li>
+                    <li><a href="Pages/Calzado.html">Calzado</a></li>
                 </ul>
         </section>
      </header>
@@ -66,11 +68,11 @@
         <h1>Productos destacados</h1>
 
         <div class="ImgProd">
-            <img src="Assets/Campera5.png" >
-            <img src="Assets/Pantalon12.png" >
-            <img src="Assets/Calzado6.png" >
-            <img src="Assets/Pantalon7.png" >
-            <img src="Assets/Camiseta9.png" >
+            <img src="Assets/Calzado3.jfif">
+            <img src="Assets/Pantalones13.jfif">
+            <img src="Assets/Camisetas3.jfif">
+            <img src="Assets/Pantalones15.jfif">
+            <img src="Assets/Campera4.jfif">
         </div>
       
      </section>
