--- a/Pages/Camperas.html
+++ b/Pages/Camperas.html
@@ -75,19 +75,23 @@
     <footer>
         <div id="Info" class="Footerinfo">
             <h2>Quienes somos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>Somos basic, un tienda dedicada a la moda basica de hombre, estamos aqui para todas esa personas que quieren vestirse basico y no destacar</p>
         </div>
 
         <div id="Contacto" class="Footerinfo">
             <h2>Contacto</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>
+              Email: Basic@Gmail.com
+              Telefono: 123456789012345
+              Twitter: @BasicUY Instagram: @BasicUY
+            </p>
         </div>
 
         <div id="Como encontrarnos" class="Footerinfo">
             <h2>Como encontrarnos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>Avenida 10 de noviembre 15000 esquina pedro perez.</p>
         </div>
-    </footer>
+      </footer>
 
 
 
