--- a/Pages/Calzado.html
+++ b/Pages/Calzado.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles.css">
-    <title>Basic: Moda masculina basica</title>
+    <meta name="keywords" content="Ropa, Moda, Basic, Clothes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -74,20 +74,23 @@
     <footer>
         <div id="Info" class="Footerinfo">
             <h2>Quienes somos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>Somos basic, un tienda dedicada a la moda basica de hombre, estamos aqui para todas esa personas que quieren vestirse basico y no destacar</p>
         </div>
 
         <div id="Contacto" class="Footerinfo">
             <h2>Contacto</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>
+              Email: Basic@Gmail.com
+              Telefono: 123456789012345
+              Twitter: @BasicUY Instagram: @BasicUY
+            </p>
         </div>
 
         <div id="Como encontrarnos" class="Footerinfo">
             <h2>Como encontrarnos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur vehicula, sapien quis iaculis pellentesque, sapien risus vehicula erat, eget gravida.</p>
+            <p>Avenida 10 de noviembre 15000 esquina pedro perez.</p>
         </div>
-    </footer>
-
+      </footer>
 
 
 </body>
